# feup-cal-20-21

./: CMakeLists.txt  README.md
lib/GraphViewerCpp/example/: main.cpp
maps/espinho_full/: clients.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
maps/espinho_strong/: clients.txt  edges.txt  nodes_xy.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
maps/other/GridGraphs/16x16/: edges.txt  nodes_xy.txt
maps/other/GridGraphs/4x4/: clients.txt  edges.txt  nodes_xy.txt  suppliers.txt
maps/other/GridGraphs/8x8/: edges.txt  nodes_xy.txt
maps/penafiel_full/: clients.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
maps/penafiel_strong/: clients.txt  edges.txt  nodes_xy.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
maps/porto_full/: clients.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
maps/porto_strong/: clients.txt  edges.txt  nodes_xy.txt  orders.txt  products.txt  suppliers.txt  vehicles.txt
src/: Application.cpp  Application.h  main.cpp
src/graph/: Graph.h  Node.h  Path.cpp  Path.h
src/gui/: GUI.cpp  GUI.h
src/market/: Client.cpp  Client.h  Order.cpp  Order.h  Product.cpp  Product.h  Stock.cpp  Stock.h  Supplier.cpp  Supplier.h  Vehicle.cpp  Vehicle.h
src/menu/: Menu.cpp  Menu.h
src/util/: Input.cpp  Input.h  Time.cpp  Time.h  Utils.cpp  Utils.h
useful/: clients.txt  edges_starting_in_one.py  format_strong_maps.py  nodes_starting_in_one.py  orders.txt  products.txt  random_attributes.py  suppliers.txt  vehicles.txt
useful/names/: product_names.txt
